--- a/sampleproject/build.gradle
+++ b/sampleproject/build.gradle
@@ -8,8 +8,6 @@ android {
         enabled = true
     }
 
-
-
     defaultConfig {
         applicationId "geo.metax.sampleproject"
         minSdkVersion 22
@@ -30,8 +28,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation "com.android.support:recyclerview-v7:28.0.0"
+    implementation "androidx.appcompat:appcompat:$androidx_appcompat"
+    implementation "androidx.constraintlayout:constraintlayout:$androidx_constraintlayout"
+    implementation "androidx.recyclerview:recyclerview:$androidx_recyclerview"
     implementation project(path: ':RecyclerAdapterLib')
 }
