--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
-    ext.androidx_appcompat = '1.1.0-alpha03'
-    ext.androidx_recyclerview = '1.1.0-alpha03'
+    ext.kotlin_version = '1.3.50'
+    ext.androidx_appcompat = '1.1.0-rc01'
+    ext.androidx_recyclerview = '1.1.0-beta03'
     ext.androidx_constraintlayout = '1.1.3'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.4'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
     }
 }
 
@@ -28,4 +31,8 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+subprojects {
+    tasks.withType(Javadoc).all { enabled = false }
 }
